--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Commit & Push
         run: |
           git config so1454 github-actions
-          git config so1454@naver.com github-actions@github.com
+          git config user.email github-actions@github.com
           git add -A .
           git commit -m "generated"
           git push
